Diseño completo de Footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h3>Romeena De Silva</h3>
                 <p>Janet Cosmetics</p>
             </div>
-             <div class="card">
+            <div class="card">
                 <img src="imagenes/gato abogado.jpg" alt="">
                 <div>⭐⭐⭐⭐⭐</div>
                 <h3>Romeena De Silva</h3>
@@ -86,11 +86,49 @@
                 <h3>Romeena De Silva</h3>
                 <p>Janet Cosmetics</p>
             </div>
+        </div>    
+    </div>
+    </section>
+
+    <footer>
+        <div id="footer-content">
+            <div class="footer-section">
+                <h3>Ik developers</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Case Studies</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Areas We Serve</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Contact us</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>+923183561921</p>
+            </div>
         </div>
 
+        <div id="footer-bottom">
+            <ul class="social-icons">
+                <li><a href="#" aria-label="Facebook"><img src="imagenes/Facebook-logo.png" alt="Logo Facebook"></a></li>
+                <li><a href="#" aria-label="Instagram"><img src="imagenes/Instagram-logo.png" alt="Logo Instagram"></a></li>
+                <li><a href="#" aria-label="Twitter/X"><img src="imagenes/X-logo.png" alt="Logo X"></a></li>
+                <li><a href="#" aria-label="LinkedIn"><img src="imagenes/LinkedIn-logo.png" alt="Logo LinkedIn"></a></li>
+            </ul>
+        </div>
         
-    </div>
-</section>
+        <div id="copyright">
+            <p>© 2023 Copyright by IK Developers. All rights reserved.</p>
+        </div>
+    </footer>
+
 
 </body>
 </html>
