Diseño de la parte de Recursos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     </div>
 
     <div>
-        
 
         <div id="content-cards">
             <div class="card">
@@ -87,6 +86,43 @@
                 <p>Janet Cosmetics</p>
             </div>
         </div>    
+    </div>
+    </section>
+
+    <section id="resources">
+    <div class="titulo">
+        <h2>Featured</h2>
+        <h2><strong>Resources</strong></h2>
+    </div>
+
+    <div id="content-resources">
+        <article class="resource-card">
+            <img src="imagenes/rcard3.jpg" alt="">
+            <h3>How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+            <a href="#">Read More
+            <span class="arrow">→</span></a>
+        </article>
+
+        <article class="resource-card">
+            <img src="imagenes/rcard3.jpg" alt="">
+            <h3>How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+            <a href="#">Read More
+            <span class="arrow">→</span></a>
+        </article>
+
+        <article class="resource-card">
+            <img src="imagenes/rcard3.jpg" alt="">
+            <h3>How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+            <a href="#">Read More
+            <span class="arrow">→</span></a>
+        </article>
+
+        <article class="resource-card">
+            <img src="imagenes/rcard3.jpg" alt="">
+            <h3>How to Build a Scalable Application up to 1 Million Users on AWS</h3>
+            <a href="#">Read More
+            <span class="arrow">→</span></a>
+        </article>
     </div>
     </section>
 
