--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id="navegador">
             <nav>
-                <ul>
+                <ul class="reset-list">
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Case Studies</a></li>
@@ -25,7 +25,7 @@
             </nav>
         </div>
         <div id="botonContacto">
-            <button>Contact Us</button>
+            <button class="btn-gradient">Contact Us</button>
         </div>
     </header>
 
@@ -35,7 +35,7 @@
             <h2>Great <strong>Product</strong> is</h2>
             <h1>built by great <span>teams</span></h1>
             <p>We help build and manage a team of world-class developers to bring your vision to life.</p>
-            <button>Let's get started!</button>
+            <button class="btn-gradient">Let's get started!</button>
         </div>
         <img src="imagenes/fondo.jpg" alt="">
     </section>
@@ -52,8 +52,8 @@
     </div>
 
     <div id="arrow-customer-container">
-        <button class="arrow-customer">←</button>
-        <button class="arrow-customer">→</button>
+        <button class="arrow-customer">&larr;</button>
+        <button class="arrow-customer">&rarr;</button>
     </div>
 
         <div id="content-cards">
@@ -193,7 +193,7 @@
             </div>
             <div class="footer-section">
                 <h3>Links</h3>
-                <ul>
+                <ul class="reset-list">
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Case Studies</a></li>
@@ -211,7 +211,7 @@
         </div>
 
         <div id="footer-bottom">
-            <ul class="social-icons">
+            <ul class="reset-list social-icons">
                 <li><a href="#" aria-label="Facebook"><img src="imagenes/Facebook-logo.png" alt="Logo Facebook"></a></li>
                 <li><a href="#" aria-label="Instagram"><img src="imagenes/Instagram-logo.png" alt="Logo Instagram"></a></li>
                 <li><a href="#" aria-label="Twitter/X"><img src="imagenes/X-logo.png" alt="Logo X"></a></li>
