Arreglos en imagenes

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <li><a href="#" aria-label="Facebook"><img src="imagenes/Facebook-logo.png" alt="Logo Facebook"></a></li>
                 <li><a href="#" aria-label="Instagram"><img src="imagenes/Instagram-logo.png" alt="Logo Instagram"></a></li>
                 <li><a href="#" aria-label="Twitter/X"><img src="imagenes/X-logo.png" alt="Logo X"></a></li>
-                <li><a href="#" aria-label="LinkedIn"><img src="imagenes/LinkedIn-logo.png" alt="Logo LinkedIn"></a></li>
+                <li><a href="#" aria-label="LinkedIn"><img src="imagenes/Linkedin-logo.png" alt="Logo LinkedIn"></a></li>
             </ul>
         </div>
         
